# CheckersAI

./: CMakeLists.txt
src/: main.cpp
